fix(pickers): prevent overflow caused by unneeded margin

--- a/src/elements/content-picker/Footer.scss
+++ b/src/elements/content-picker/Footer.scss
@@ -57,10 +57,6 @@
         flex: 1 0 auto;
     }
 
-    .be-pagination {
-        margin-left: 5px;
-    }
-
     .btn-group {
         margin-left: 5px;
         margin-right: 5px;
